--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Hero -->
     <section class="hero">
-      <div class="container">
+      <div class="container pt-3">
         <div class="row row-hero">
           <div class="col-md-6">
             <div class="copy">
