Edit padding hero

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <!-- Akhir Navbar -->
 
     <!-- Hero -->
-    <section class="hero">
-      <div class="container pt-3">
+    <section id="hero">
+      <div class="container">
         <div class="row row-hero">
           <div class="col-md-6">
             <div class="copy">
